--- a/capflix/src/app/header/header.component.html
+++ b/capflix/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <h1>CAPSKILL</h1>
 </div>
 
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(223, 223, 223); opacity: 0.8; border-radius: 15px; position: relative;">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgba(255, 255, 255, 0.897); border-radius: 15px; position: relative;">
 
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
@@ -10,7 +10,7 @@
         <a class="nav-link" href="#">Capflix</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Questionários</a>
+        <a class="nav-link" routerLink="/catalogo">Questionários</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle " href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
