--- a/capflix/src/app/app.component.html
+++ b/capflix/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-header></app-header>
-<router-outlet>
-  <app-questionario></app-questionario>
-</router-outlet>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
