--- a/capflix/src/app/questionario/questionario.component.css
+++ b/capflix/src/app/questionario/questionario.component.css
@@ -1,7 +1,6 @@
 .body {
     margin-top: 15px;
-    background-color: rgb(223, 223, 223);
-    opacity: 0.8;
+    background-color: rgba(255, 255, 255, 0.897);
     border-radius: 15px;
     padding: 15px;
     display: block;
@@ -17,7 +16,7 @@
 .questionario {
     width: 70%;
     display: inline-block;
-  
+
 }
 
 .pergunta>p {
@@ -37,7 +36,7 @@
 .correcao {
     display: inline-block;
     width: 30%;
-  
+
 }
 .correcao>h3{
     margin-top: 15px;
@@ -53,7 +52,7 @@
     border-width: 2px;
     border-color: black;
     margin-left: 55px;
-    
+
 }
 
 .correcao>button{
@@ -67,12 +66,12 @@
     margin-left: 55px;
 }
 
-.campo-correcao {    
+.campo-correcao {
 
     display: grid;
     grid-template-columns: 80px 80px;
     grid-template-rows: 80px 80px;
-   
+
 }
 
 .campo-correcao>#r1,
