--- a/capflix/src/app/questionario/questionario.component.html
+++ b/capflix/src/app/questionario/questionario.component.html
@@ -1,30 +1,25 @@
 <div class="body">
     <div class="titulo-questionario">
         <h2>QUESTIONÁRIO</h2>
+        <p class="text-center">Questão {{currentQuiz+1}} de {{quizzes.length}}</p>
     </div>
 
     <div class="questionario">
         <form>
             <div class="pergunta">
-            <p>1) Analise as afirmações abaixo sobre valores de ponto flutuante em Java e assinale a alternativa correta.<br><br><br>
-                I. Números de ponto flutuante não são adequados para cálculos financeiros em que erros de arredondamento não podem ser tolerados.<br><br>                               
-                II. Uma expressão 0.0 / 0.0 gera uma exceção em tempo de execução.<br><br>                
-                III. Valores de ponto flutuante, como 0.5 e 4.6, são sempre considerados como do tipo double.<br><br>
-            </p>
+                <p>{{quizzes[currentQuiz].question}}<br><br>
+                </p>                
             </div>
-            <div class="respostas">
-            <input type="checkbox" id="" name="alternativa1" value="1">
-            <label for="anternativa1"> a) </label> <br>
-            <input type="checkbox" id="" name="alternativa2" value="2">
-            <label for="anternativa2"> b) Todas estão incorretas.</label> <br>
-            <input type="checkbox" id="" name="alternativa3" value="3">
-            <label for="anternativa3"> c) Apenas I e II estão corretas.</label> <br>
-            <input type="checkbox" id="" name="alternativa4" value="4">
-            <label for="anternativa4"> d) Apenas I e III estão corretas.</label> <br>
-            <input type="checkbox" id="" name="alternativa5" value="5">
-            <label for="anternativa5"> d) Apenas II e III estão corretas.</label> <br>
-            </div>
-            
+            <ul class="list-group" *ngFor="let quiz of quizzes[currentQuiz].answer">
+                <label>
+                    <li class="li-group-item">
+                        <input type="radio" name="options" (change)="onAnswer(quiz.correct)" [disabled]="answerSelected">
+                        {{quiz.option}}
+                    </li>
+                </label>
+            </ul>
+
+            Questões corretas: {{correctAnswers}}. | Questões Incorretas: {{incorrectAnswers}}
         </form>
     </div>
     <div class="correcao">
