--- a/capflix/src/app/questionario/questionario.component.html
+++ b/capflix/src/app/questionario/questionario.component.html
@@ -19,6 +19,9 @@
             </ul>
 
             Questões corretas: {{correctAnswers}}. | Questões Incorretas: {{incorrectAnswers}}
+
+            <br><button type="button" class="btn btn-danger" (click)="antQuest()">Anterior</button> 
+            <button type="button" class="btn btn-danger" (click)="proxQuest()">Próxima</button>
         </form>
     </div>
     <div class="correcao">
