--- a/capflix/src/app/login/login.component.html
+++ b/capflix/src/app/login/login.component.html
@@ -30,7 +30,7 @@
         <p><a href="">Esqueceu a senha?</a></p>
       </div>
       <div class="cadastrar">
-        <p><a href="">Cadastre-se</a></p>
+        <p><a routerLink="cadastrar-login">Cadastre-se</a></p>
       </div>
       <button type="submit" class="btn btn-primary" routerLink="/catalogo">
         Entrar
