--- a/capflix/src/app/cadastrar-login/cadastrar-login.component.html
+++ b/capflix/src/app/cadastrar-login/cadastrar-login.component.html
@@ -2,7 +2,7 @@
     <div class="login">
       <form>
         <div class="email">
-          <label for="exampleInputEmail1">Usuário ou E-mail</label>
+          <label for="exampleInputEmail1">Insira seu email</label>
           <input
             type="email"
             class="form-control"
@@ -12,7 +12,16 @@
           />
         </div>
         <div class="senha">
-          <label for="exampleInputPassword1">Senha</label>
+          <label for="exampleInputPassword1">Digite uma senha</label>
+          <input
+            type="password"
+            class="form-control"
+            id="exampleInputPassword1"
+            placeholder="Password"
+          />
+        </div>
+        <div class="senha">
+          <label for="exampleInputPassword1">Confirme sua senha</label>
           <input
             type="password"
             class="form-control"
