--- a/capflix/src/app/login/login.component.css
+++ b/capflix/src/app/login/login.component.css
@@ -25,3 +25,9 @@
 .cadastrar{
   text-align: right;
 }
+
+.mensagem-erro{
+  font-size: 14px;
+  color: red;
+  font-family: Arial, Helvetica, sans-serif;
+}
