--- a/capflix/src/app/questionario/questionario.component.html
+++ b/capflix/src/app/questionario/questionario.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="questionario">
-        <form>
+        <form class="form">
             <div class="pergunta">
                 <p>{{quizzes[currentQuiz].question}}<br><br></p>
             </div>
@@ -18,7 +18,7 @@
 
                 </label>
             </ul>
-
+            <br><br>
             Questões corretas: {{correctAnswers}}. | Questões Incorretas: {{incorrectAnswers}}
 
 
