--- a/capflix/src/app/questionario/questionario.component.css
+++ b/capflix/src/app/questionario/questionario.component.css
@@ -1,9 +1,7 @@
 .body {
     margin-top: 15px;
     background-color: rgba(255, 255, 255, 0.897);
-    border-radius: 15px;
-    padding: 15px;
-    display: block;
+    border-radius: 15px;  
     height: 75%;
 }
 
@@ -16,24 +14,28 @@
 .questionario {
     width: 70%;
     display: inline-block;
-
-}
+  }
 
 .pergunta>p {
     font-size: 22px;
 }
 
-.respostas {
+.form{
+    display: inline;
+}
+
+.list-group {
     font-size: 20px;
-    margin-top: 60px;
+    margin-top: 15px;
     margin-left: 30px;
 }
 
-.respostas>input {
-    margin-top: 25px;
+.li-group-item>input {
+    margin-top: 15px;
 }
 
 .correcao {
+
     display: inline-block;
     width: 30%;
 
