--- a/capflix/src/app/cadastrar-login/cadastrar-login.component.html
+++ b/capflix/src/app/cadastrar-login/cadastrar-login.component.html
@@ -31,8 +31,7 @@
         <div class="form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1" />
           <label class="form-check-label" for="exampleCheck1"
-            >Lembrar Dados.</label
-          >
+            >Lembrar Dados.</label>
         </div>
         <button type="submit" class="btn btn-primary" >
           Cadastrar
