--- a/capflix/src/app/cadastrar-login/cadastrar-login.component.css
+++ b/capflix/src/app/cadastrar-login/cadastrar-login.component.css
@@ -25,4 +25,12 @@
   .cadastrar{
     text-align: right;
   }
+
+  #errSenha {
+    font-size: 13px;
+    margin-top: 3px;
+    color: red;
+    margin-left: 5px;
+  
+  }
   
