--- a/capflix/src/app/cadastrar-login/cadastrar-login.component.html
+++ b/capflix/src/app/cadastrar-login/cadastrar-login.component.html
@@ -2,36 +2,36 @@
     <div class="login">
       <form class="conteudo-form" [formGroup]="cadastroForm" (submit)="cadastrarLogin()"> 
         <div class="email">
-          <label for="exampleInputEmail1">Insira seu email</label>
+          <label for="InputEmail1">Insira seu email</label>
           <input
             type="email"
             class="form-control"
-            placeholder="Enter email"
-            formControlName="email"
+            placeholder="Enter email"  
           />
         </div>
         <div class="senha">
-          <label for="exampleInputPassword1">Digite uma senha</label>
+          <label for="InputPassword1">Digite uma senha</label>
           <input
             type="password"
             class="form-control"
-            placeholder="Password"
-            formControlName="senha"
+            placeholder="Password"         
           />
         </div>
         <div class="senha">
-          <label for="exampleInputPassword2">Confirme sua senha</label>
+          <label for="InputPassword2">Confirme sua senha</label>
           <input
             type="password"
             class="form-control"
-            placeholder="Password"
-            formControlName="confirmaSenha"
-          />
+            placeholder="Password"/>
+          
         </div>
         <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+          <input type="checkbox" class="form-check-input" id="checkDados" />
           <label class="form-check-label" for="exampleCheck1"
             >Lembrar Dados.</label>
+        </div>
+        <div>
+          <p id="errSenha" *ngIf="!erro">Login ou senha inválidos.</p>
         </div>
         <button type="submit" class="btn btn-primary" >
           Cadastrar
