--- a/capflix/src/app/cadastrar-login/cadastrar-login.component.css
+++ b/capflix/src/app/cadastrar-login/cadastrar-login.component.css
@@ -11,7 +11,7 @@
     background-color: rgba(255, 255, 255, 0.897);
     border-radius: 15px;
     width: 450px;
-    padding: 40px;
+    padding: 30px;
   }
   .login > button{
     text-align: center;
@@ -34,3 +34,9 @@
   
   }
   
+  #voltar{
+    margin-left: 50%;
+    border-width: 0.5px;
+    margin-bottom: 5px;
+    
+  }
