--- a/capflix/src/app/header/header.component.css
+++ b/capflix/src/app/header/header.component.css
@@ -3,15 +3,20 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     padding: 11px;
-    text-align: center;
     font-weight: bolder;
     font-size: 65px;
+    display: flex;
+    justify-content: center;
     
 
 }
 
 .navbar-collapse{
-   margin-left: 1500px;
+   justify-content: end;
+   margin-right: 15px;
+   border-radius: 15px;
+   background-color: rgba(255, 255, 255, 0.897);
+   display: flex;
     
 }
 a {
