--- a/capflix/src/app/header/header.component.html
+++ b/capflix/src/app/header/header.component.html
@@ -2,8 +2,7 @@
   <h1>CAPSKILL</h1>
 </div>
 
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgba(255, 255, 255, 0.897); border-radius: 15px; position: relative;">
-
+<nav class="navbar navbar-expand-lg navbar-dark">
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
